# OpenGL

./: .gitignore  imgui.ini
OpenGL/OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/OpenGL/res/shaders/: Basic.shader  DepthMapVisualize.shader  DirectionalShadowMap.shader  Lighting_And_NormalMap.shader  Lighting_And_NormalMap_In_Tangent.shader  Lighting_Specular_Per_Fragment.shader  Lighting_Specular_Per_Vertex.shader  SimpleTransparent.shader  ToonShading.shader
OpenGL/OpenGL/src/: Application.cpp  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
OpenGL/OpenGL/src/Manager/: TimeManager.cpp  TimeManager.h
OpenGLPratice/: CMakeLists.txt  Dependency.cmake
OpenGLPratice/shader/: lighting.fs  lighting.vs  perVertexColor.vs  simple.vs  texture.vs
OpenGLPratice/src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexLayout.cpp  vertexLayout.h
TinyRayTracer/: TinyRayTracer.vcxproj  TinyRayTracer.vcxproj.filters  main.cpp
